@@ -4952,4 +4952,8 @@ a)"xI
 
 /[:[:alnum:]-[[a:lnum:]+/
 
+/((?(?C'')\QX\E(?!((?(?C'')(?!X=X));=)r*X=X));=)/
+
+/((?(?C'')\Q\E(?!((?(?C'')(?!X=X));=)r*X=X));=)/
+
 # End of testinput2 
